--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -9,7 +9,7 @@
     <ion-content class="has-header">
       <ion-list>
         <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.properties.id}}">
-          {{spot.properties.name}} <small>({{spot.properties.spottype}})</small>
+          {{spot.properties.name}} <small>({{spot.properties.type}})</small>
         </ion-item>
       </ion-list>
     </ion-content>
