make title bar dark and change wording for links

--- a/www/templates/modals/allModal.html
+++ b/www/templates/modals/allModal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar class="bar-dark nav-title-slide-ios7">
     <h1 class="title">Select a Spot Type</h1>
     <div class="button button-clear" ng-click="closeModal()"><span class="icon ion-close"></span></div>
   </ion-header-bar>
