--- a/www/templates/modals/groupModal.html
+++ b/www/templates/modals/groupModal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar class="bar-dark nav-title-slide-ios7">
     <h1 class="title">Add to a New or Existing Group</h1>
     <div class="button button-clear" ng-click="closeModal('groupModal')"><span class="icon ion-close"></span></div>
   </ion-header-bar>
