--- a/www/templates/modals/groupModal.html
+++ b/www/templates/modals/groupModal.html
@@ -8,7 +8,7 @@
                   ng-value="item"
                   ng-checked="isGroupChecked(item.id)"
                   ng-click="toggleSelection(item, 'groups_selected', 'groups_unselected')">
-      {{ item.name }}
+      {{ item.name }} <small>({{ item.type }})</small>
     </ion-checkbox>
   </ion-content>
 </ion-modal-view>
