default selected project is 1st project, make project operation buttons responsive

--- a/www/templates/sync.html
+++ b/www/templates/sync.html
@@ -18,7 +18,6 @@
       <br>
       <div class="list">
 
-
         <div ng-show="projects.length > 0">
           <div class="item item-divider">
             Project Operations
@@ -35,7 +34,7 @@
           </label>
 
           <!-- Upload, Download or Delete Selected Project -->
-          <div class="row">
+          <div class="row responsive-sm">
             <div class="col">
               <button ng-click="getProjectSpots()" ng-disabled="!project" class="button button-block icon-left icon ion-android-download">Download</button>
             </div>
