--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,7 +20,7 @@
           Spots
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/offlinemap">
-          Offline Areas
+          Offline Maps
         </ion-item>
 				<ion-item nav-clear menu-close href="#/app/search">
           Search
