--- a/www/templates/offlinemap.html
+++ b/www/templates/offlinemap.html
@@ -1,4 +1,4 @@
-<ion-view title="Offline Areas">
+<ion-view title="Offline Maps">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
