changed js alerts/confirms to ionic alerts/confirms

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -109,6 +109,13 @@ Map Layer Switcher Style
 }
 
 /*--------------------
+Right buttons in a list
+--------------------*/
+.button-second{
+  right:95px !important;
+}
+
+/*--------------------
 Tabs Style
 --------------------*/
 .tabs {
