--- a/www/templates/offlinemap.html
+++ b/www/templates/offlinemap.html
@@ -7,16 +7,18 @@
     {{numOfflineTiles}} tiles
   </ion-nav-buttons>
   <ion-content class="has-header">
-
     <ion-list>
-      <ion-item ng-repeat="map in maps.maps" class="item-button-right">
-        <span>
-          <button class="button button-small button-calm" ng-click="edit(map)">edit</button>
-          <button class="button button-small button-assertive" ng-click="delete(map)">delete</button>
-        </span>
-        <h2>{{map.name}} (tile count: {{map.tileArray.length}}, size: {{map.size}}), provider: {{map.mapProvider}})</h2>
+      <ion-item ng-repeat="map in maps.maps">
+        <div class="row">
+          <div class="col">
+            <b>{{map.name}}</b>  <small>({{map.tileArray.length}} tiles, {{map.size}} KB, {{map.mapProvider}})</small>
+          </div>
+          <div class="col item-button-right">
+            <button class="button button-second icon-left button-small button-calm ion-edit " ng-click="edit(map)">Edit</button>
+            <button class="button icon-left button-small button button-assertive ion-trash-b" ng-click="delete(map)">Delete</button>
+          </div>
+        </div>
       </ion-item>
     </ion-list>
-
   </ion-content>
 </ion-view>
