--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -4,9 +4,8 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
       <button ng-click="getLocation();" class="button button-icon icon ion-pinpoint"></button>
-      <button ng-click="toggleAirplaneMode()" ng-class="{'button button-icon icon ion-earth': !airplaneMode,
-      'button button-icon icon ion-plane':airplaneMode}"></button>
-      <button ng-click="cacheOfflineTiles();" ng-disabled="disableArchiveTiles()" class="button button-icon icon ion-archive"></button>
+      <button ng-click="cacheOfflineTiles();" class="button button-icon icon ion-archive"></button>
+      <div ng-class="{'online': isOnline(), 'offline': !isOnline()}"></div>
     </ion-nav-buttons>
     <ion-pane data-tap-disabled="true">
       <div id="mapdiv" style="height:100%"></div>
